# httpie-auth-store

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: cd.yml  ci.yml  release.yml  tests.yml
src/httpie_auth_store/: __init__.py  _auth.py  _keychain.py  _plugin.py  _secret.py  _store.py
src/httpie_credential_store/: __init__.py  _auth.py  _cred.py  _keychain.py  _keychains.py  _plug.py  _plugin.py  _store.py
tests/: conftest.py  test_credential_store.py  test_keychain_password_store.py  test_keychain_shell.py  test_keychain_system.py  test_plugin.py  test_plugin_deprecated.py  test_secret.py  test_store.py
tests/keychains/: test_shell.py  test_system.py
