[tool.poetry]
name = "httpie-credential-store"
version = "3.1.0"
description = "HTTPie: one auth to rule them all!"
authors = ["Ihor Kalnytskyi <ihor@kalnytskyi.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ikalnytskyi/httpie-credential-store"
repository = "https://github.com/ikalnytskyi/httpie-credential-store"
keywords = ["httpie", "credential", "store", "keychain", "plugin", "auth"]

[tool.poetry.dependencies]
python = "^3.8"
httpie = "^3.1"
keyring = ">= 23.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
responses = "^0.20"

[tool.poetry.plugins."httpie.plugins.auth.v1"]
credential-store = "httpie_credential_store:CredentialStoreAuthPlugin"
creds = "httpie_credential_store:CredsAuthPlugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "D", "TRY", "S", "PTH", "PLR", "COM", "PT005", "ISC001", "INP001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["httpie_credential_store"]
lines-after-imports = 2
lines-between-types = 1
