[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "httpie-credential-store"
version = "3.1.0"
description = "HTTPie: one auth to rule them all!"
authors = ["Ihor Kalnytskyi <ihor@kalnytskyi.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ikalnytskyi/httpie-credential-store"
repository = "https://github.com/ikalnytskyi/httpie-credential-store"
keywords = ["httpie", "credential", "store", "keychain", "plugin", "auth"]

[tool.poetry.dependencies]
python = "^3.8"
httpie = "^3.1"
keyring = ">= 23.5"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
responses = "^0.20"
pytest-github-actions-annotate-failures = "*"
httpie-hmac = "*"

[tool.poetry.plugins."httpie.plugins.auth.v1"]
store = "httpie_credential_store:StoreAuthPlugin"
credential-store = "httpie_credential_store:CredentialStoreAuthPlugin"
creds = "httpie_credential_store:CredsAuthPlugin"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN", "D", "PTH", "PLR", "PT005", "ISC001", "INP001", "S603", "S607", "COM812"]

[tool.ruff.lint.per-file-ignores]
"src/httpie_credential_store/_keychain.py" = ["S602"]
"tests/*" = ["S101", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["httpie_credential_store"]
lines-after-imports = 2
lines-between-types = 1
